Enchanted Keyfinder (EK) Changelog
Build 0.1.0.82 Beta -- January 17th, 2011
----------------------------------
1.	New Feature: Windows XP Product Key can be changed using EK.
2.	New Feature: All settings are now saved and loaded from an INI file.  Now
	EK is portable.
3.	Changed Feature: Settings dialog has changed.  Now settings auto-save to
	an INI file.  To restore default settings, simply delete the INI file.
4.	Fixed bug: where Loading fonts from INI file did not work with Key list.
5.	Fixed bug: where settings were not correctly loading Log information.
6.	Thoroughly tested loading and saving of settings.









--- Old changelog from Magical Jelly Bean Keyfinder
Build 2.0.8.01 -- March 29, 2010
----------------------------------
 - Fixed - Properly Reading keys from Registry under 64-bit systems (Wow6432Node)
 - Fixed - Program no longer omited as long as one registry item exists for that
           program even if other registry items do not.
 - Added - Determining if there is a wildcard in the config file and finding the
           key associated with it. EG. Nero
 - Added - Computer Name to be displayed with Operating System Information 
 - Added - More program keys detected.

Build 2.0.7.50 -- September 10, 2009
----------------------------------
 - Fixed. Photoshop7 serial should not be decoded.
 - Added more program keys detected.

Build 2.0.7.13 -- February 03, 2009
----------------------------------
 - Fixed problem with displaying Media Center edition when running in Vista.

Build 2.0.7.01 -- February 03, 2009
----------------------------------
 - Added. Microsoft Product Part Number is displayed if known.

Build 2.0.6.36 -- January 23, 2009
----------------------------------
 - Added. Keyfinder will try load backup copies of Windows hives to find 
   keys in the registry.

Build 2.0.6.33 -- December 10, 2008
-----------------------------------
 - Fixed buffer overflow when MS CD Key is corrupt in the registry.
 