@@ -2,7 +2,7 @@ object Form1: TForm1
   Left = 0
   Top = 0
   Caption = 'Enchanted Keyfinder v'
-  ClientHeight = 581
+  ClientHeight = 601
   ClientWidth = 632
   Color = clGradientInactiveCaption
   Constraints.MaxHeight = 768
@@ -26,7 +26,7 @@ object Form1: TForm1
     Left = 230
     Top = 0
     Width = 2
-    Height = 562
+    Height = 582
     ExplicitLeft = 241
     ExplicitHeight = 250
   end
@@ -34,7 +34,7 @@ object Form1: TForm1
     Left = 0
     Top = 0
     Width = 230
-    Height = 562
+    Height = 582
     Align = alLeft
     BiDiMode = bdLeftToRight
     Constraints.MinWidth = 100
@@ -53,13 +53,13 @@ object Form1: TForm1
     ShowHint = False
     TabOrder = 0
     OnClick = ListBox1Click
-    ExplicitHeight = 542
+    ExplicitHeight = 562
   end
   object Memo1: TMemo
     Left = 232
     Top = 0
     Width = 400
-    Height = 562
+    Height = 582
     Align = alClient
     Constraints.MinHeight = 100
     Constraints.MinWidth = 100
@@ -71,11 +71,11 @@ object Form1: TForm1
     ParentFont = False
     ReadOnly = True
     TabOrder = 1
-    ExplicitHeight = 542
+    ExplicitHeight = 562
   end
   object StatusBar1: TStatusBar
     Left = 0
-    Top = 562
+    Top = 582
     Width = 632
     Height = 19
     Panels = <
@@ -88,13 +88,13 @@ object Form1: TForm1
       item
         Width = 50
       end>
-    ExplicitTop = 542
+    ExplicitTop = 562
   end
   object Panel1: TPanel
     Left = 232
     Top = 0
     Width = 400
-    Height = 562
+    Height = 582
     Align = alClient
     Color = clGradientInactiveCaption
     Ctl3D = True
@@ -108,7 +108,7 @@ object Form1: TForm1
     TabOrder = 4
     Visible = False
     OnClick = Panel1Click
-    ExplicitHeight = 542
+    ExplicitHeight = 562
     object Image1: TImage
       Left = 102
       Top = 17
